<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/illustration"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/car_waiting_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/otp_image" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            style="@style/card_design_bg"
            android:background="@drawable/auth_design"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />


                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/editTextText"
                        android:text="@string/enter_the_otp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        app:layout_constraintTop_toBottomOf="@+id/textView5">

                        <EditText
                            android:id="@+id/Otp1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/otp_box_design"

                            android:ems="1"
                            android:drawableTint="@color/ccp_color"
                            android:textColor="@color/ccp_color"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                        <EditText
                            android:id="@+id/Otp2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/otp_box_design"
                            android:ems="1"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                        <EditText
                            android:id="@+id/Otp3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/otp_box_design"
                            android:ems="1"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                        <EditText
                            android:id="@+id/Otp4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/otp_box_design"
                            android:ems="1"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                        <EditText
                            android:id="@+id/Otp5"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/otp_box_design"
                            android:ems="1"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                        <EditText
                            android:id="@+id/Otp6"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/otp_box_design"
                            android:ems="1"
                            android:gravity="center"
                            android:hint="@string/_0"
                            android:inputType="number"
                            android:maxLength="1"
                            android:textColorHint="@color/transparent" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resend_otp_in"
                        app:layout_constraintEnd_toStartOf="@+id/textView8"
                        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

                    <TextView
                        android:id="@+id/TimeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:text=""
                        android:textColor="@color/primary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
                </LinearLayout>

                <TextView
                    android:id="@+id/resendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/resend_otp"
                    android:textColor="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <Button
                    android:id="@+id/verify"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="25dp"
                    android:layout_marginTop="44dp"
                    android:fontFamily="@font/inter_extra_bold"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:text="@string/verify"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/resendOtp" />

                <TextView
                    android:id="@+id/EditNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/edit_mobile_number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/verify" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/anim_layout"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>