<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/illustration"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"

            android:contentDescription="@string/illustration_of_women_getting_into_taxi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/auth_image" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@drawable/auth_design">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:id="@id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="What is your Number ?"
                android:textColor="@color/primary"
                android:textSize="20sp"
                 />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/MobileNo"
                android:layout_height="wrap_content"
                android:text="Enter the Mobile Number" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/otp_box_design"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_arrowColor="@color/primary"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="18sp"
                    app:ccp_contentColor="@color/ccp_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" >


                </com.hbb20.CountryCodePicker>

                <EditText
                    android:id="@+id/MobileNo"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:autofillHints="phoneNumber"
                    android:ems="10"
                    android:background="@drawable/no_border"
                    android:maxLength="10"
                    android:textSize="20sp"
                    android:inputType="number"
                     />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginVertical="30dp"
            android:text="We will send you the Verification code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/sendOtp"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:fontFamily="@font/inter_bold"
            android:padding="14dp"
            android:textColor="@color/white"
            android:text="@string/send_otp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:text="@string/terms_amp_condition_privacy_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendOtp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/anim_layout"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</androidx.constraintlayout.widget.ConstraintLayout>